# unifi-network-mcp

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  Makefile  PRIVACY.md  QUICKSTART.md  README.md  SECURITY.md  TODO-new-features.md  docker-compose.yml  env.example  opencode.json  pyproject.toml  pyproject.workspace.toml
apps/access/: Dockerfile  Makefile  README.md  pyproject.toml  server.json
apps/access/devtools/: dev_console.py
apps/access/docs/: configuration.md  events.md  permissions.md  tools.md  troubleshooting.md
apps/access/scripts/: generate_tool_manifest.py
apps/access/src/unifi_access_mcp/: __init__.py  bootstrap.py  categories.py  jobs.py  main.py  runtime.py  schemas.py  tool_index.py  tools_manifest.json  validator_registry.py  validators.py
apps/access/src/unifi_access_mcp/config/: config.yaml
apps/access/src/unifi_access_mcp/managers/: connection_manager.py  credential_manager.py  device_manager.py  door_manager.py  event_manager.py  policy_manager.py  (+2 more)
apps/access/tests/: conftest.py
apps/access/tests/unit/: test_connection_manager.py  test_credentials.py  test_devices.py  test_doors.py  test_events.py  test_policies.py  test_scaffold.py  test_system.py  test_visitors.py
apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  openapi.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_add_app_settings.py
apps/api/docs/: README.md  docker-compose.example.yml  graphql-reference.md  graphql-versioning.md  openapi-reference.md  release-coverage.md  release-smoke-checklist.md
apps/api/src/unifi_api/: __init__.py  __main__.py  cli.py  config.py  config.yaml  logging.py  server.py
apps/api/tests/: conftest.py  test_action_endpoint.py  test_actions_dispatcher.py  test_admin_audit.py  test_admin_controllers.py  test_admin_dashboard.py  test_admin_data.py  test_admin_keys.py  test_admin_logs.py  test_admin_settings.py  test_admin_shell.py  test_api_key.py  test_app_settings_model.py  test_argon_cache.py  test_audit.py  test_audit_pruner.py  test_audit_query.py  test_audit_streams.py  test_auth_middleware.py  test_bootstrap.py  test_capabilities.py  test_catalog.py  test_catalog_resources.py  test_cli.py  test_config.py  test_controllers_probe.py  test_controllers_routes.py  test_controllers_service.py  test_crypto.py  test_diagnostics.py  test_engine.py  test_graphql_scaffold_cli.py  test_health.py  test_keys_cli.py  test_lifespan_admin.py  test_lifespan_streams.py  test_live_api_smoke_harness.py  test_log_reader.py  test_logging.py  test_logging_rotating_file.py  (+17 more)
apps/api/tests/graphql/: test_docs_drift.py  test_errors.py  test_graphql_coverage.py  test_health_query.py  test_n1_regression.py  test_naming_convention.py  test_openapi_docs_drift.py  test_openapi_drift.py  test_permissions.py  test_pydantic_export.py  test_pydantic_page_wrapper.py  test_query_e2e_access.py  test_query_e2e_network.py  test_query_e2e_protect.py  test_request_cache.py  test_resolver_coverage.py  test_sdl_drift.py  test_type_registry.py  test_versioning_policy.py
apps/api/tests/serializers/: test_access_credentials_visitors_events.py  test_access_doors_policies_system.py  test_access_serializers.py  test_network_client_groups.py  test_network_config.py  test_network_events.py  test_network_filtering.py  test_network_misc.py  test_network_serializers.py  test_network_sessions.py  test_network_stats.py  test_network_switch.py  test_network_system.py  test_protect_alarms_system.py  test_protect_cameras_lights_chimes.py  test_protect_events_recordings_liveviews.py  test_protect_serializers.py
apps/network/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml  server.json
apps/network/devtools/: dev_console.py
apps/network/docs/: configuration.md  permissions.md  tools.md  transports.md  troubleshooting.md
apps/network/scripts/: README.md  generate_tool_manifest.py  get-version.sh
apps/network/src/unifi_network_mcp/: __init__.py  _version.py  bootstrap.py  categories.py  jobs.py  main.py  runtime.py  schemas.py  tool_index.py  tools_manifest.json  validator_registry.py  validators.py
apps/network/tests/: __init__.py  conftest.py  test_async_jobs.py
apps/network/tests/integration/: test_path_interceptor.py
apps/network/tests/unit/: test_acl_manager.py  test_acl_tools.py  test_allowed_hosts.py  test_api_request_usage.py  test_auth_integration.py  test_backup_tools.py  test_client_group_manager.py  test_client_ip_settings.py  test_client_lookup.py  test_content_filter_manager.py  test_device_commands.py  test_device_radio.py  test_dns_manager.py  test_dns_tools.py  test_dpi_manager.py  test_event_manager.py  test_event_tools.py  test_firewall_groups.py  test_firewall_manager.py  test_firewall_tools.py  test_forget_client.py  test_hotspot_manager.py  test_http_transport.py  test_network_schema.py  test_network_tools.py  test_oon_manager.py  test_outlet_control.py  test_path_detection.py  test_permissions.py  test_routing_manager.py  test_server_port_config.py  test_stats_enhanced.py  test_subscribe_events_tool.py  test_switch_manager.py  test_system_manager.py  test_tool_map_sync.py  test_usergroup_manager.py  test_version.py  test_wifi_tools.py
apps/protect/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml  server.json
apps/protect/devtools/: dev_console.py
apps/protect/docs/: configuration.md  events.md  permissions.md  tools.md  troubleshooting.md
apps/protect/scripts/: generate_tool_manifest.py
apps/protect/src/unifi_protect_mcp/: __init__.py  bootstrap.py  categories.py  jobs.py  main.py  runtime.py  schemas.py  tool_index.py  tools_manifest.json  validator_registry.py  validators.py
apps/protect/tests/: conftest.py
apps/protect/tests/unit/: test_alarm.py  test_cameras.py  test_connection_manager.py  test_devices.py  test_event_buffer.py  test_event_manager.py  test_event_resource.py  test_event_tools.py  test_liveviews.py  test_recordings.py  test_scaffold.py  test_snapshot_resource.py  test_system.py
(+602 files in other folders)
