[project]
name = "unifi-network-mcp"
version = "0.2.0"
description = "Unifi Network MCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.21.2",
    "aiohttp>=3.8.5",
    "aiounifi>=87.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "omegaconf>=2.3.0",
    "jsonschema>=4.17.0",
    "typing-extensions>=4.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.shared-data]
".well-known" = "share/unifi-network-mcp/.well-known"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/.well-known",
    "/README.md",
    "/LICENSE",
]

# Ensure config files and tool manifest are included in the package
[tool.hatch.build.targets.wheel.force-include]
"src/config/config.yaml" = "src/config/config.yaml"
"src/tools_manifest.json" = "src/tools_manifest.json"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "aioresponses>=0.7.0",
    "pytest-cov>=4.0.0",
]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "aioresponses>=0.7.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# CLI entrypoint that launches the UniFi Network MCP server
unifi-network-mcp = "src.main:main"
