[project]
name = "unifi-api"
dynamic = ["version"]
description = "UniFi rich HTTP API service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "unifi-core>=0.2,<0.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0",
    "cryptography>=42.0.0",
    "argon2-cffi>=23.1.0",
    "typer>=0.13.0",
    "pydantic>=2.10.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "omegaconf>=2.3.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
unifi-api = "unifi_api.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]
unifi-core = { workspace = true }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options.root = "../.."
raw-options.tag_regex = "^api/v(?P<version>\\d+(?:\\.\\d+)*)(?:\\S*)$"
raw-options.git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "api/v*"]
raw-options.fallback_version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/unifi_api/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/unifi_api"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/unifi_api",
    "/alembic",
    "/alembic.ini",
    "/README.md",
]

[tool.hatch.build.targets.wheel.force-include]
"src/unifi_api/config.yaml" = "unifi_api/config.yaml"
"alembic.ini" = "unifi_api/alembic.ini"
"alembic" = "unifi_api/alembic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
