[project]
name = "unifi-api-server"
dynamic = ["version"]
description = "UniFi rich HTTP API service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "unifi-core>=0.2,<0.3",
    # Product-library runtime deps. unifi-core imports these from inside
    # network/protect/access manager modules, so any consumer of unifi-core
    # that registers controllers across all three products has to declare
    # them. Versions kept in sync with apps/{network,protect,access}.
    "aiounifi>=88",
    "uiprotect>=6.0.0",
    "py-unifi-access>=1.1.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0",
    "cryptography>=42.0.0",
    "argon2-cffi>=23.1.0",
    "typer>=0.13.0",
    "pydantic>=2.10.0",
    "jinja2>=3.1.0",
    "strawberry-graphql[fastapi]>=0.310.0,<0.320.0",
    "pyyaml>=6.0",
    "omegaconf>=2.3.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
unifi-api-server = "unifi_api.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.6.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]
unifi-core = { workspace = true }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options.root = "../.."
raw-options.tag_regex = "^api/v(?P<version>\\d+(?:\\.\\d+)*)(?:\\S*)$"
raw-options.git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "api/v*"]
raw-options.fallback_version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/unifi_api/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/unifi_api"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/unifi_api",
    "/alembic",
    "/alembic.ini",
    "/README.md",
]

# force-include only paths that live OUTSIDE src/unifi_api/ (which is already
# picked up by `packages = ["src/unifi_api"]` above). Re-including paths that
# are already in the package produces duplicate ZIP entries that PyPI 400s on.
[tool.hatch.build.targets.wheel.force-include]
"alembic.ini" = "unifi_api/alembic.ini"
"alembic" = "unifi_api/alembic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
