[project]
name = "unifi-network-mcp"
dynamic = ["version"]
description = "Unifi Network MCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "unifi-mcp-shared",
    "unifi-core",
    "mcp[cli]>=1.26.0,<2",
    "aiohttp>=3.8.5",
    "aiounifi>=88",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "omegaconf>=2.3.0",
    "jsonschema>=4.17.0",
    "typing-extensions>=4.4.0",
]

[tool.uv.sources]
unifi-mcp-shared = { workspace = true }
unifi-core = { workspace = true }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options.root = "../.."
raw-options.tag_regex = "^network/v(?P<version>\\d+(?:\\.\\d+)*)(?:\\S*)$"

[tool.hatch.build.hooks.vcs]
version-file = "src/unifi_network_mcp/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/unifi_network_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/unifi_network_mcp",
    "/README.md",
]

# Ensure config files and tool manifest are included in the package
[tool.hatch.build.targets.wheel.force-include]
"src/unifi_network_mcp/config/config.yaml" = "unifi_network_mcp/config/config.yaml"
"src/unifi_network_mcp/tools_manifest.json" = "unifi_network_mcp/tools_manifest.json"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "aioresponses>=0.7.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "aioresponses>=0.7.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
# CLI entrypoint that launches the UniFi Network MCP server
unifi-network-mcp = "unifi_network_mcp.main:main"

[tool.ruff]
line-length = 120
exclude = ["src/unifi_network_mcp/_version.py"]  # Auto-generated by hatch-vcs

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "E501",  # Line too long - handled by line-length setting above
]

[tool.ruff.lint.isort]
known-first-party = ["unifi_network_mcp", "unifi_mcp_shared", "unifi_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
